# codex-background-task-handler

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  README.zh-CN.md  pyproject.toml
.githooks/: pre-commit
.github/: FUNDING.yml
docs/: CLI_ACTIVE_TURN_STEER_DESIGN.md  CLI_DOGFOOD_V1_COMPLETION_PLAN.md  CLI_OPERATOR_RECOVERY.md  CLI_SHARED_APP_SERVER_SIDECAR_DESIGN.md  CLI_TASK_SUPERVISOR_DESIGN.md  CLI_TRUSTED_ALL_AUTO_DELIVERY_PLAN.md  CODEX_REVIEW_GATE.md  CODEX_REVIEW_GATE_PROBE.md  DAEMON_UPGRADE_SAFETY.md  DESIGN_OVERVIEW.en-GB.md  DESIGN_OVERVIEW.zh-CN.md  DESKTOP_BACKGROUND_TASK_BRIDGE_DESIGN.md  DESKTOP_BRIDGE_FOUNDATION.md  DESKTOP_LIVE_PREFLIGHT_EVIDENCE.md  DESKTOP_LIVE_PREFLIGHT_VALIDATION.md  DESKTOP_TRANSCRIPT_RELAY_VALIDATION.md  DESKTOP_WRITEBACK_DROPBOX_PROBE_VALIDATION.md  DESKTOP_WRITEBACK_HELPER_LIVE_VALIDATION.md  DEVELOPMENT.en-GB.md  DEVELOPMENT.zh-CN.md  GIT_HOOKS.md  LIVE_E2E.en-GB.md  LIVE_E2E.md  LIVE_E2E.zh-CN.md  OPERATOR_RECOVERY.en-GB.md  OPERATOR_RECOVERY.zh-CN.md  PROJECT_STATE.md  PROJECT_TODO.md  README.md  README.zh-CN.md  SHARED_CORE_ARCHITECTURE.md  USAGE.en-GB.md  USAGE.zh-CN.md
scripts/: cli_shared_app_server_poc.mjs  cli_turn_steer_poc.mjs  desktop_thread_inject_poc.py  install-git-hooks.sh  install.sh
src/: artifact.rs  cli.rs  cli_app_server_client.rs  daemon.rs  fs_layout.rs  lib.rs  main.rs  models.rs  plugin_rpc.rs  self_update.rs  service.rs  store.rs
tests/: cli_help.rs  cli_phase1.rs  cli_run.rs  daemon_domain_rpc.rs  daemon_phase2.rs  desktop_foundation.rs  doctor_cli.rs  live_new_thread.rs  (+3 more)
(+51 files in other folders)
