[package]
name = "codex-background-task-handler"
version = "0.1.1"
edition = "2024"
license = "Apache-2.0"

[[bin]]
name = "cbth"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
libc = "0.2.178"
rusqlite = { version = "0.37.0", features = ["bundled"] }
semver = "1.0.27"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
ureq = "3.1.4"
uuid = { version = "1.19.0", features = ["v7"] }

[dev-dependencies]
tempfile = "3.24.0"
